Aðeins að hreinsa til og breytti upphafssíðu

--- a/Mooshak2/Content/bootstrap.css
+++ b/Mooshak2/Content/bootstrap.css
@@ -4935,9 +4935,11 @@ a.list-group-item.active > .badge,
   line-height: 2.1428571435;
   color: inherit;
   background-color: #eeeeee;
+  text-align: center;
 }
 
 .jumbotron h1 {
+  text-align: center;
   line-height: 1;
   color: inherit;
 }
