CSS smá fikt og smávægilegt

--- a/Mooshak2/Content/bootstrap.css
+++ b/Mooshak2/Content/bootstrap.css
@@ -4502,12 +4502,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
+  background-color: #ff0000;
   border-color: #080808;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+  color: #000000;
+  text-decoration: double;
 }
 
 .navbar-inverse .navbar-brand:hover,
@@ -4521,7 +4522,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: #000000;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
@@ -4929,6 +4930,8 @@ a.list-group-item.active > .badge,
 }
 
 .jumbotron {
+  margin-left: 300px;
+  margin-right: 300px;
   padding: 30px;
   margin-bottom: 30px;
   font-size: 21px;
