--- a/Mooshak2/Views/Account/UserDetails.cshtml
+++ b/Mooshak2/Views/Account/UserDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model Mooshak2.Models.Entities.Users
+﻿@model Mooshak2.Models.ViewModel.UserCreateEditViewModel
 
 @{
     ViewBag.Title = "UserDetails";
@@ -6,7 +6,7 @@
 
 <h2>UserDetails</h2>
 
-@*<div>
+<div>
     <h4>Users</h4>
     <hr />
     <dl class="dl-horizontal">
@@ -75,7 +75,7 @@
         </dd>
 
     </dl>
-</div>*@
+</div>
 
 
 @using (Html.BeginForm())
