Added functioning index

--- a/Mooshak2/Views/Shared/_Layout.cshtml
+++ b/Mooshak2/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Edit Current User", "UserDetails", "Account")</li>
+                    <li>@Html.ActionLink("All users", "Index", "Account")</li>
                 </ul>
             </div>
         </div>
