--- a/Mooshak2/Views/Shared/_Layout.cshtml
+++ b/Mooshak2/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("All users", "Index", "Account")</li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
