--- a/Mooshak2/Views/Account/Register.cshtml
+++ b/Mooshak2/Views/Account/Register.cshtml
@@ -30,31 +30,42 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.FullName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Role, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @{
-                List<SelectListItem> listItems = new List<SelectListItem>();
-                listItems.Add(new SelectListItem
+                List<SelectListItem> roleList = new List<SelectListItem>();
+                roleList.Add(new SelectListItem
                 {
                     Text = "Admin",
                     Value = "Admin",
                     Selected = true
                 });
-                listItems.Add(new SelectListItem
+                roleList.Add(new SelectListItem
                 {
                     Text = "Teacher",
                     Value = "Teacher",
                 });
-                listItems.Add(new SelectListItem
+                roleList.Add(new SelectListItem
                 {
                     Text = "Student",
                     Value = "Student"
                 });
             }
-            @Html.DropDownListFor(m => m.Role, listItems, "-- Select Status --")            
+            @Html.DropDownListFor(m => m.Role, roleList, "-- Select Status --")            
         </div>
     </div>
-
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
