--- a/Mooshak2/Views/Account/Register.cshtml
+++ b/Mooshak2/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Mooshak2.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Create a new user account";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,8 +8,6 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
