--- a/Mooshak2/Views/Account/UserDetails.cshtml
+++ b/Mooshak2/Views/Account/UserDetails.cshtml
@@ -45,7 +45,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.r)
+            @Html.DisplayFor(model => model.role)
         </dd>
 
     </dl>
@@ -106,17 +106,15 @@
                     Value = "Student"
                 });
             }
-            @Html.DropDownListFor(m => m.Role, roleList, "-- Select Status --")       
+            @Html.DropDownListFor(m => m.role, roleList, "-- Select Status --")       
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div clss="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
-    </div>
-
 }
 
 <p>
