--- a/Mooshak2/Views/Courses/Index.cshtml
+++ b/Mooshak2/Views/Courses/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>All courses:</h2>
+@*<h2>All courses:</h2>
 <table class="table table-hover">
     <caption> A list of courses</caption>
     <thead>
@@ -19,7 +19,7 @@
             {
                 <tr>
                     <td>
-                        @Html.ActionLink(item.courseName, "UserDetails", new { userID = item.courseID })
+                        @Html.ActionLink(item., "UserDetails", new { userID = item.courseID })
                     </td>
                 </tr>
                 <tr>
@@ -31,4 +31,4 @@
 
         }
     </tbody>
-</table>
+</table>*@
