Changed getAllUsers to return UserViewModel

--- a/Mooshak2/Views/Account/Index.cshtml
+++ b/Mooshak2/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<Mooshak2.Models.Entities.Users>
+﻿@model ICollection<Mooshak2.Models.ViewModel.UserViewModel>
 
 @{
     ViewBag.Title = "Index";
