--- a/Mooshak2/Views/Courses/Index.cshtml
+++ b/Mooshak2/Views/Courses/Index.cshtml
@@ -1,16 +1,17 @@
-﻿@model ICollection<Mooshak2.Models.Entities.Courses>
+﻿@model ICollection<Mooshak2.Models.ViewModel.CourseViewModel>
 
 @{
     ViewBag.Title = "Index";
 }
 
-@*<h2>All courses:</h2>
+<h2>All courses:</h2>
 <table class="table table-hover">
-    <caption> A list of courses</caption>
     <thead>
         <tr>
             <th>Course name:</th>
+            <th>Course description:</th>
         </tr>
+
     </thead>
     <tbody>
         @if (Model != null)
@@ -19,16 +20,13 @@
             {
                 <tr>
                     <td>
-                        @Html.ActionLink(item., "UserDetails", new { userID = item.courseID })
+                        @Html.ActionLink(item.courseName,"UserDetails", new { userID = item.courseID })
                     </td>
-                </tr>
-                <tr>
                     <td>
-                        @Html.Display(item.courseDescription);
+                        @Html.ActionLink(item.courseDescription, "UserDetails", new { userID = item.courseID })
                     </td>
                 </tr>
             }
-
         }
     </tbody>
-</table>*@
+</table>
