--- a/Mooshak2/Views/Courses/Index.cshtml
+++ b/Mooshak2/Views/Courses/Index.cshtml
@@ -20,7 +20,7 @@
             {
                 <tr>
                     <td>
-                        @Html.ActionLink(item.courseName,"UserDetails", new { userID = item.courseID })
+                        @Html.ActionLink(item.courseName,"CourseDetails", new { courseID = item.courseID })
                     </td>
                     <td>
                         @item.courseDescription
