--- a/Mooshak2/Views/Account/StudentView.cshtml
+++ b/Mooshak2/Views/Account/StudentView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Mooshak2.Models.ViewModel.StudentViewModel
+﻿@model IEnumerable<Mooshak2.Models.ViewModel.StudentViewModel>
 
 <div>
     <h4>StudentViewModel</h4>
