--- a/Mooshak2/Views/Account/TeacherView.cshtml
+++ b/Mooshak2/Views/Account/TeacherView.cshtml
@@ -1,36 +1,50 @@
-﻿@model Mooshak2.Models.TeacherViewModel
+﻿@model Mooshak2.Models.ViewModel.TeacherViewModel
 
-<div>
-    <h4>TeacherViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.fullName)
-        </dt>
+@{
+    Layout = null;
+}
 
-        <dd>
-            @Html.DisplayFor(model => model.fullName)
-        </dd>
+<!DOCTYPE html>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.courseID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.courseID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.assignmentID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.assignmentID)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>TeacherView</title>
+</head>
+<body>
+    <div>
+        <h4>TeacherViewModel</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.fullName)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.fullName)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.courseID)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.courseID)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.assignmentID)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.assignmentID)
+            </dd>
+    
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
+</body>
+</html>
