--- a/Mooshak2/Views/Account/AdminView.cshtml
+++ b/Mooshak2/Views/Account/AdminView.cshtml
@@ -15,6 +15,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.PrimaryKey }) |
+    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
