Þarf að fara að muna eftir að færa mig úr master

--- a/Mooshak2/Views/Shared/_Layout.cshtml
+++ b/Mooshak2/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                     {
                         <li>@Html.ActionLink("All users", "Index", "Account")</li>
                         <li>@Html.ActionLink("Create user", "Register", "Account")</li>
+                        <li>@Html.ActionLink("Create course", "CreateCourse", "Courses")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
