Laga Login view fyrir all users

--- a/Mooshak2/Views/Shared/_Layout.cshtml
+++ b/Mooshak2/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                 <ul class="nav navbar-nav">
                     @if (ViewContext.HttpContext.User.IsInRole("Admin"))
                     {
-                        <li>@Html.ActionLink("All users", "Index", "Account")</li>
+                        <li>@Html.ActionLink("All users", "Index/", "Account")</li>
                         <li>@Html.ActionLink("Create user", "Register", "Account")</li>
                         <li>@Html.ActionLink("Create course", "CreateCourse", "Courses")</li>
                     }
